--- a/Arya/example.html
+++ b/Arya/example.html
@@ -15,7 +15,7 @@
     }
 </style>
 </head>
-<body style="background-color: #ddd;">
+<body style="background-color: #fff;">
 	 <?php include('header.php'); ?>
 	<?php include('../navbar.php'); ?>
 
